# Turtlebot_hockey_game

./: README.md  group8_minimal.launch
communication/: CMakeLists.txt  package.xml
communication/angelina/: CMakeLists.txt  angelina.doxy  angelinaapplication.cpp  colortask.cpp  icons.qrc  main.cpp  mainwindow.cpp  qsingleton.h  ratiotask.cpp  resultframe.cpp  resultframe.h  server.cpp  server.h
communication/hermes/: CMakeLists.txt  referee.cpp  referee.doxy  referee.h
communication/launch/: communication.launch
communication/srv/: ab.srv  ratio.srv
communication/test/: .test.cpp.swp  CMakeLists.txt  main.cpp  test.cpp  test.h
ctest/: CMakeLists.txt  package.xml
ctest/launch/: ctest.launch
ctest/src/: ctest_node.cpp
localisation/: CMakeLists.txt  package.xml
localisation/include/: defineLocalisationConsts.h  localisation.h  position.h~
localisation/msg/: objects_poses.msg
localisation/nodes/: localisationNode.cpp
localisation/other/: useful.cpp
localisation/ressources/: resources.txt
localisation/src/: localisation.cpp
localisation/srv/: SetPose.srv
object_recognition/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
object_recognition/include/object_recognition/: object_recognition.h
object_recognition/launch/: 3dsensor.launch~  object_recognition.launch
object_recognition/nodes/: object_recognition_node.cpp  object_recognition_node.cpp~
object_recognition/src/: object_recognition.cpp
path_planning_new/: CMakeLists.txt  package.xml
path_planning_new/include/path_planning/: action.h  node.h  path_planning.h  problem.h
path_planning_new/launch/: path_planning test.launch~  path_planning.launch  path_planning_real.launch
path_planning_new/nodes/: path_planning_node.cpp
path_planning_new/src/: action.cpp  node.cpp  path_planning.cpp  problem.cpp
path_planning_new/srv/: map_dimensions.srv
path_planning_new/world/: hokey.world  hokey2.world  maze.world  turtlebot.inc
rplidar_ros-master/launch/: rplidar.launch
